tests/baselines/reference/conflictingTypeAnnotatedVar.errors.txt
conflictingTypeAnnotatedVar.ts(1,5): error TS2300: Duplicate identifier 'foo'.
conflictingTypeAnnotatedVar.ts(2,10): error TS2300: Duplicate identifier 'foo'.
conflictingTypeAnnotatedVar.ts(2,10): error TS2393: Duplicate function implementation.
conflictingTypeAnnotatedVar.ts(2,17): error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
conflictingTypeAnnotatedVar.ts(3,10): error TS2300: Duplicate identifier 'foo'.
conflictingTypeAnnotatedVar.ts(3,10): error TS2393: Duplicate function implementation.
conflictingTypeAnnotatedVar.ts(3,17): error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.


==== conflictingTypeAnnotatedVar.ts (7 errors) ====
    var foo: string;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    function foo(): number { }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
             ~~~
!!! error TS2393: Duplicate function implementation.
                    ~~~~~~
!!! error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.
    function foo(): number { }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
             ~~~
!!! error TS2393: Duplicate function implementation.
                    ~~~~~~
!!! error TS2355: A function whose declared type is neither 'undefined', 'void', nor 'any' must return a value.